// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TSC: es6/functionDeclarations FunctionDeclaration1_es6 1`] = `
"function* foo() {
}
"
`;

exports[`TSC: es6/functionDeclarations FunctionDeclaration11_es6 1`] = `
"function* yield() {
}
"
`;

exports[`TSC: es6/functionDeclarations FunctionDeclaration13_es6 1`] = `
"function* foo() {
	// Legal to use 'yield' in a type context.
var v;
}
"
`;

exports[`TSC: es6/functionDeclarations FunctionDeclaration2_es6 1`] = `
"function f(yield) {
}
"
`;

exports[`TSC: es6/functionDeclarations FunctionDeclaration3_es6 1`] = `
"function f(yield=yield) {
}
"
`;

exports[`TSC: es6/functionDeclarations FunctionDeclaration4_es6 1`] = `
"function yield() {
}
"
`;

exports[`TSC: es6/functionDeclarations FunctionDeclaration8_es6 1`] = `
"var v = { [yield]: foo };
"
`;

exports[`TSC: es6/functionDeclarations FunctionDeclaration9_es6 1`] = `
"function* foo() {
	var v = { [yield]: foo };
}
"
`;
